# pta_finance

./: .gitignore  CLAUDE.md  README.md  SETUP.md  config.example.toml  plan.md  pyproject.toml
.github/: last-run.txt
.github/workflows/: ci.yml  monthly-report.yml
pta_finance/: __init__.py  backup.py  budget_import.py  budget_sync.py  cli.py  config.py  etl.py  ids.py  models.py  receipt_ingest.py  report_source.py  schema.py  sheets.py
pta_finance/analytics/: __init__.py  aggregate.py  trends.py
pta_finance/reports/: __init__.py  builder.py  charts.py  render.py
pta_finance/reports/templates/: external.html.j2  internal.html.j2
scripts/: check_no_identity.py
tests/: conftest.py  test_analytics.py  test_backup.py  test_budget_import.py  test_budget_sync.py  test_cli.py  test_config.py  test_etl.py  test_ids.py  test_models.py  test_receipt_ingest.py  test_report_source.py  test_reports.py  test_schema.py  test_sheets.py  test_smoke_pipeline.py  test_workflows.py
